# rules_devicetree

./: .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: buildifier.yaml  ci.yaml  release.yaml  release_prep.sh  tag.yaml
devicetree/: BUILD.bazel  devicetree_library.bzl  dtb.bzl  dtb_composite.bzl  dtbo.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
devicetree/private/: BUILD.bazel  autodetected_toolchain_repo.bzl  base_dtb_info.bzl  constants.bzl  devicetree_library.bzl  devicetree_library_info.bzl  devicetree_toolchain_info.bzl  dtb.bzl  dtb_composite.bzl  resolved_toolchain.bzl  toolchain.bzl  toolchains_repo.bzl  utils.bzl
devicetree/private/gazelle/: BUILD.bazel
devicetree/tests/: BUILD.bazel  versions_test.bzl
devicetree/tests/load_visibility_test/: BUILD.bazel  load_visibility_test.py
docs/: BUILD.bazel  building.md  configuring_toolchain.md  dtb.md  dtb_composite.md  dtbo.md  installation.md  toolchain.md
docs/api/: devicetree_library.md  dtb.md  dtbo.md
e2e/custom_toolchain/: BUILD.bazel  MODULE.bazel  check_file_size.sh  host_tools_repo.bzl
e2e/smoke/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  define.dts
e2e/smoke/include_test/c_include_test/: BUILD.bazel  c_include.dts
e2e/smoke/include_test/c_include_test/include/: c_include.dtsi  dt-bindings.h
e2e/smoke/include_test/dts_include_test/: BUILD.bazel  dts_include.dts
e2e/smoke/include_test/dts_include_test/include/: dts_include.dtsi
e2e/smoke/include_test/order_test/: BUILD.bazel  order.dts
e2e/smoke/include_test/order_test/include_0/: dt-bindings.h
e2e/smoke/include_test/order_test/include_bad/: dt-bindings.h
e2e/test_utils/: BUILD.bazel  MODULE.bazel  fail_analysis_test.bzl
