# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "dtb",
    bzl_library_target = "//devicetree:dtb",
)

stardoc_with_diff_test(
    name = "dtb_composite",
    bzl_library_target = "//devicetree:dtb_composite",
)

stardoc_with_diff_test(
    name = "dtbo",
    bzl_library_target = "//devicetree:dtbo",
)

stardoc_with_diff_test(
    name = "toolchain",
    bzl_library_target = "//devicetree:toolchain",
)

update_docs(name = "update")
