load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "autodetected_toolchain_repo",
    srcs = ["autodetected_toolchain_repo.bzl"],
    visibility = ["//devicetree:__subpackages__"],
    deps = [":constants"],
)

bzl_library(
    name = "base_dtb_info",
    srcs = ["base_dtb_info.bzl"],
    visibility = ["//devicetree:__subpackages__"],
)

bzl_library(
    name = "constants",
    srcs = ["constants.bzl"],
    visibility = ["//devicetree:__subpackages__"],
)

bzl_library(
    name = "devicetree_toolchain_info",
    srcs = ["devicetree_toolchain_info.bzl"],
    visibility = ["//devicetree:__subpackages__"],
    deps = [":constants"],
)

bzl_library(
    name = "dtb",
    srcs = ["dtb.bzl"],
    visibility = ["//devicetree:__subpackages__"],
    deps = [
        ":base_dtb_info",
        ":utils",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//devicetree:__subpackages__"],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//devicetree:__subpackages__"],
    deps = [
        ":constants",
        ":devicetree_toolchain_info",
    ],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
    visibility = ["//devicetree:__subpackages__"],
)

filegroup(
    name = "all_bzl_files",
    srcs = glob(["*.bzl"]),
    visibility = ["//devicetree/tests:__subpackages__"],
)
