load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "constants",
    srcs = ["constants.bzl"],
    visibility = ["//devicetree:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//devicetree:__subpackages__"],
)
