load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "autodetected_toolchain_repo",
    srcs = ["autodetected_toolchain_repo.bzl"],
    visibility = ["//devicetree:__subpackages__"],
    deps = [":constants"],
)

bzl_library(
    name = "constants",
    srcs = ["constants.bzl"],
    visibility = ["//devicetree:__subpackages__"],
)

bzl_library(
    name = "devicetree_toolchain_info",
    srcs = ["devicetree_toolchain_info.bzl"],
    visibility = ["//devicetree:__subpackages__"],
    deps = [":constants"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//devicetree:__subpackages__"],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//devicetree:__subpackages__"],
    deps = [
        ":constants",
        ":devicetree_toolchain_info",
    ],
)

filegroup(
    name = "all_bzl_files",
    srcs = glob(["*.bzl"]),
    visibility = ["//devicetree/tests:__subpackages__"],
)
