# Copyright (C) 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Test that a custom toolchain works."""

module(name = "rules_dt_e2e_test_custom_toolchain")

bazel_dep(name = "rules_devicetree")
local_path_override(
    module_name = "rules_devicetree",
    path = "../..",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

host_tools_repo = use_repo_rule("//:host_tools_repo.bzl", "host_tools_repo")

host_tools_repo(
    name = "host_tools_repo",
)

register_toolchains("//:custom_toolchain")
