bazel_dep(name = "rules_devicetree", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "rules_devicetree_test_utils", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.1", dev_dependency = True)

local_path_override(
    module_name = "rules_devicetree",
    path = "../..",
)

local_path_override(
    module_name = "rules_devicetree_test_utils",
    path = "../test_utils",
)
