# Copyright (C) 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Test that /include/ works."""

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_devicetree//devicetree:devicetree_library.bzl", "devicetree_library")
load("@rules_devicetree//devicetree:dtb.bzl", "dtb")

devicetree_library(
    name = "dts_include_lib",
    hdrs = [
        "include/dts_include.dtsi",
    ],
    includes = [
        "include",
    ],
)

dtb(
    name = "dts_include",
    srcs = [
        "dts_include.dts",
    ],
    deps = [
        ":dts_include_lib",
    ],
)

build_test(
    name = "dts_include_test",
    targets = [
        # keep sorted
        ":dts_include",
    ],
)
