# Copyright (C) 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Test that #include works."""

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_devicetree//devicetree:devicetree_library.bzl", "devicetree_library")
load("@rules_devicetree//devicetree:dtb.bzl", "dtb")

devicetree_library(
    name = "0",
    hdrs = ["include_0/dt-bindings.h"],
    includes = ["include_0"],
)

# Test that children are visited first, then this target.
# 0 is visited first, then bad, so include_0/dt-binding.h is resolved.
devicetree_library(
    name = "bad_on_0",
    hdrs = ["include_bad/dt-bindings.h"],
    includes = ["include_bad"],
    deps = [":0"],
)

dtb(
    name = "test_child",
    srcs = ["order.dts"],
    deps = [":bad_on_0"],
)

# Test that orders in deps are respected.
devicetree_library(
    name = "bad",
    hdrs = ["include_bad/dt-bindings.h"],
    includes = ["include_bad"],
)

dtb(
    name = "test_dep_order",
    srcs = ["order.dts"],
    deps = [
        # do not sort
        ":0",
        ":bad",
    ],
)

build_test(
    name = "order_test",
    targets = [
        # keep sorted
        ":test_child",
        ":test_dep_order",
    ],
)
